# boom-core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml  test.yml
examples/: cosmology.rs  observer_ephemerides.rs  photometry.rs  target_airmass.rs  targets_separation.rs  time_conversions.rs
src/: corrections.rs  cosmo.rs  lib.rs  main.rs  observer.rs  phot.rs  spatial.rs  target.rs  time.rs
